Bug 1286744 - Return the empty string from GetAllResponseHeaders() if the XHR failed. r=smaug